build_log_2.txt

> Task :compileJava FAILED
C:\Development\Owner\dividend-goal\src\main\java\org\example\dividendgoal\controller\ArticleController.java:65: error: cannot find symbol
        model.addAttribute("canonicalUrl", AppConstants.BASE_URL + "/articles/why-small-expenses-matter");
                                           ^
  symbol:   variable AppConstants
  location: class ArticleController
C:\Development\Owner\dividend-goal\src\main\java\org\example\dividendgoal\controller\ArticleController.java:74: error: cannot find symbol
        model.addAttribute("canonicalUrl", AppConstants.BASE_URL + "/articles/best-monthly-dividend-stocks");
                                           ^
  symbol:   variable AppConstants
  location: class ArticleController
C:\Development\Owner\dividend-goal\src\main\java\org\example\dividendgoal\controller\LifestyleController.java:67: error: cannot find symbol
                String currentUrl = AppConstants.BASE_URL + request.getRequestURI();
                                    ^
  symbol:   variable AppConstants
  location: class LifestyleController
C:\Development\Owner\dividend-goal\src\main\java\org\example\dividendgoal\controller\LifestyleGoalController.java:82: error: cannot find symbol
        model.addAttribute("canonicalUrl", AppConstants.BASE_URL + request.getRequestURI());
                                           ^
  symbol:   variable AppConstants
  location: class LifestyleGoalController
C:\Development\Owner\dividend-goal\src\main\java\org\example\dividendgoal\controller\SitemapController.java:30: error: cannot find symbol
        String baseUrl = AppConstants.BASE_URL;
                         ^
  symbol:   variable AppConstants
  location: class SitemapController
C:\Development\Owner\dividend-goal\src\main\java\org\example\dividendgoal\controller\SitemapController.java:50: error: cannot find symbol
        String baseUrl = AppConstants.BASE_URL;
                         ^
  symbol:   variable AppConstants
  location: class SitemapController
C:\Development\Owner\dividend-goal\src\main\java\org\example\dividendgoal\controller\SitemapController.java:82: error: cannot find symbol
        String baseUrl = AppConstants.BASE_URL;
                         ^
  symbol:   variable AppConstants
  location: class SitemapController
C:\Development\Owner\dividend-goal\src\main\java\org\example\dividendgoal\scheduler\IndexingScheduler.java:56: error: cannot find symbol
        String baseUrl = AppConstants.BASE_URL; // 실제 도메인으로 변경 필수
                         ^
  symbol:   variable AppConstants
  location: class IndexingScheduler
8 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
1 actionable task: 1 executed
